
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int exit (int) ;
 int modify_vsyscall ;
 int printf (char*) ;
 int pthread_create (int *,int *,int ,int ) ;
 int pthread_join (int ,int *) ;
 int sleep (int) ;
 int verification_result ;
 int write (int,char*,int) ;

void verify_stage1(void)
{
    int x;
    pthread_t v_thread;

    sleep(5);

    for(x=0; x<300; x++) {

        pthread_create(&v_thread, ((void*)0), modify_vsyscall, 0);

        pthread_join(v_thread, ((void*)0));

        if(verification_result == 1) {
            exit(0);
        }

        write(2,".",1);
        sleep(1);
    }

    printf("could not modify vsyscall\n");

    exit(1);
}
