; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_40871.c_verify_stage1.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_40871.c_verify_stage1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@modify_vsyscall = common dso_local global i32 0, align 4
@verification_result = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"could not modify vsyscall\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @verify_stage1() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @sleep(i32 5)
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %19, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 300
  br i1 %6, label %7, label %22

7:                                                ; preds = %4
  %8 = load i32, i32* @modify_vsyscall, align 4
  %9 = call i32 @pthread_create(i32* %2, i32* null, i32 %8, i32 0)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @pthread_join(i32 %10, i32* null)
  %12 = load i32, i32* @verification_result, align 4
  %13 = icmp eq i32 %12, 1
  br i1 %13, label %14, label %16

14:                                               ; preds = %7
  %15 = call i32 @exit(i32 0) #3
  unreachable

16:                                               ; preds = %7
  %17 = call i32 @write(i32 2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  %18 = call i32 @sleep(i32 1)
  br label %19

19:                                               ; preds = %16
  %20 = load i32, i32* %1, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %1, align 4
  br label %4

22:                                               ; preds = %4
  %23 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %24 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @sleep(i32) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i32, i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
